--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,12 +1,1 @@
-/HospitalManagementSystem.class
-/Main.class
-/Person.class
-/Hospital.class
-/Doctor.class
-/Record.class
-/Nurse.class
-/Patient.class
-/Prescription.class
-/Receptionist.class
-/Ward.class
-/TechnicalStaff.class
+/Staff.class
