--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,13 @@
+/Doctor.class
+/FileHandling.class
+/Hospital.class
+/HospitalManagementSystem.class
+/Labs.class
+/Main.class
+/Medicine.class
+/Nurse.class
 /Patient.class
 /Person.class
 /Record.class
 /Staff.class
-/ArrayList.class
-/Labs.class
+/UML of Hospital Management System.pdf
