--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,12 @@
+/Doctor.class
+/FileHandling.class
+/Hospital.class
+/HospitalManagementSystem.class
 /Labs.class
+/Main.class
+/Medicine.class
+/Nurse.class
+/Patient.class
+/Person.class
+/Record.class
+/Staff.class
